added review stuff

--- a/Front-end-template/app/src/main/res/layout/fragment_profile.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_profile.xml
@@ -80,5 +80,71 @@
         app:layout_constraintStart_toEndOf="@+id/chef_name"
         app:layout_constraintTop_toTopOf="@+id/chef_name" />
 
+    <RatingBar
+        android:id="@+id/avgRatingBar"
+        android:layout_width="245dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:isIndicator="true"
+        android:numStars="5"
+        android:rating="2.25"
+        android:stepSize="0.1"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myRectangleView" />
+
+    <Button
+        android:id="@+id/seeReviewsButton"
+        android:layout_width="115dp"
+        android:layout_height="73dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginLeft="72dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="See Reviews"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/avgRatingText"
+        app:layout_constraintVertical_bias="0.476" />
+
+    <Button
+        android:id="@+id/addReviewButton"
+        android:layout_width="115dp"
+        android:layout_height="73dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Add Review"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.442"
+        app:layout_constraintStart_toEndOf="@+id/seeReviewsButton"
+        app:layout_constraintTop_toBottomOf="@+id/avgRatingText"
+        app:layout_constraintVertical_bias="0.476" />
+
+    <TextView
+        android:id="@+id/avgRatingText"
+        android:layout_width="239dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Average Rating :"
+        android:textAppearance="@style/TextAppearance.AppCompat"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/avgRatingBar" />
+
 
 </android.support.constraint.ConstraintLayout>
