--- a/Front-end-template/app/src/main/res/layout/fragment_food_detail.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_food_detail.xml
@@ -135,6 +135,13 @@
 
                     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
 
+                    <Button
+                        android:id="@+id/btnViewProfileFromFood"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="View Cooks Profile"
+                        android:onClick="openProfile" />
+
                 </LinearLayout>
 
             </android.support.v7.widget.CardView>
@@ -155,7 +162,7 @@
                     android:textSize="14sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
-                
+
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
