--- a/Front-end-template/app/src/main/res/layout/review_item.xml
+++ b/Front-end-template/app/src/main/res/layout/review_item.xml
@@ -17,13 +17,11 @@
 
         <TextView
             android:id="@+id/firstAndLast"
-            android:layout_width="99dp"
-            android:layout_height="28dp"
-            android:layout_below="@+id/reviewItemRatingBar"
+            android:layout_width="134dp"
+            android:layout_height="36dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginTop="-43dp"
             android:layout_marginEnd="15dp"
             android:layout_marginRight="15dp"
             android:layout_marginBottom="142dp"
@@ -34,6 +32,7 @@
 
         <RatingBar
             android:id="@+id/reviewItemRatingBar"
+            style="@style/Widget.AppCompat.RatingBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -41,6 +40,7 @@
             android:layout_alignParentTop="true"
             android:layout_marginStart="17dp"
             android:layout_marginLeft="17dp"
+            android:theme="@style/RatingBar"
             android:layout_marginTop="15dp"
             android:isIndicator="true" />
 
