--- a/Front-end-template/app/src/main/res/values/styles.xml
+++ b/Front-end-template/app/src/main/res/values/styles.xml
@@ -19,5 +19,9 @@
         <item name="color">@android:color/black</item>
     </style>
 
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/design_default_color_primary_dark</item>
+        <item name="colorControlActivated">@color/colorAccent</item>
+    </style>
 
 </resources>
