--- a/Front-end-template/app/src/main/res/layout/fragment_add_review.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_add_review.xml
@@ -45,7 +45,7 @@ android:background="@android:color/background_light">
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:isIndicator="true"
+        android:isIndicator="false"
         android:theme="@style/RatingBar"
         tools:layout_editor_absoluteX="72dp"
         tools:layout_editor_absoluteY="51dp"
