--- a/Front-end-template/app/src/main/res/layout-v21/fragment_food_detail.xml
+++ b/Front-end-template/app/src/main/res/layout-v21/fragment_food_detail.xml
@@ -25,7 +25,6 @@
 
             <ImageView
                 android:id="@+id/image_food"
-                android:src="@drawable/rice"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@null"
@@ -104,22 +103,6 @@
                         android:layout_height="wrap_content"
                         >
 
-                        <ImageView
-                            android:src="@drawable/ic_attach_money_black_24dp"
-                            android:layout_weight="1"
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content" />
-
-                        <TextView
-                            android:id="@+id/food_price"
-                            android:text="10.00"
-                            android:textColor="@color/colorPrimaryDark"
-                            android:textSize="17sp"
-                            android:textStyle="bold"
-                            android:layout_width="0dp"
-                            android:layout_weight="9"
-                            android:layout_height="wrap_content" />
-
                     </LinearLayout>
 
                     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
@@ -136,6 +119,13 @@
                         >
 
                     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
+
+                    <Button
+                        android:id="@+id/btnViewProfileFromFood"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="View Cooks Profile"
+                        android:onClick="openProfile" />
 
                 </LinearLayout>
 
@@ -163,13 +153,5 @@
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
-
-    <Button
-        android:id="@+id/btnViewProfileFromFood"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="View Profile"
-        app:layout_anchor="@+id/app_bar_layout"
-        app:layout_anchorGravity="bottom|center" />
 
 </android.support.design.widget.CoordinatorLayout>
