--- a/Front-end-template/app/src/main/res/layout/fragment_login_screen.xml
+++ b/Front-end-template/app/src/main/res/layout/fragment_login_screen.xml
@@ -9,24 +9,23 @@
     <View
         android:id="@+id/myRectangleView5"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="195dp"
         android:background="@drawable/rectangle"
         android:clickable="false"
         app:barrierAllowsGoneWidgets="false"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="47dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
 
     <EditText
         android:id="@+id/login_password"
         android:layout_width="275dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="26dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/search_layout"
+        android:layout_marginBottom="272dp"
         android:drawableLeft="@drawable/ic_passkey_24dp"
         android:ems="10"
         android:fontFamily="@font/nunito_semibold"
@@ -37,22 +36,21 @@
         android:paddingBottom="10dp"
         android:textColor="#999999"
         android:textSize="13sp"
-        app:layout_constraintBottom_toTopOf="@+id/submit_login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_userid"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
 
     <EditText
         android:id="@+id/login_userid"
         android:layout_width="275dp"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginTop="160dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:background="@drawable/search_layout"
         android:drawableLeft="@drawable/ic_login_24dp"
         android:fontFamily="@font/nunito_semibold"
         android:hint="  User ID"
@@ -64,15 +62,16 @@
         android:textSize="13sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="194dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/submit_login"
         android:layout_width="219dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
-        android:layout_marginBottom="128dp"
+        android:layout_marginTop="88dp"
         android:background="@drawable/buttonshape"
         android:clickable="true"
         android:fontFamily="@font/nunito_semibold"
@@ -81,20 +80,20 @@
         android:textColor="#ffffff"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_password" />
+        app:layout_constraintTop_toBottomOf="@+id/login_password"
+        app:layout_constraintVertical_bias="0.314" />
 
     <TextView
         android:id="@+id/login_banner"
         android:layout_width="match_parent"
         android:layout_height="144dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="32dp"
-        android:fontFamily="@font/nunito_semibold"
         android:gravity="center"
-        android:text="Breadwinner Login"
-        android:textColor="#ffffff"
+        android:text="LOGIN"
+        android:textColor="#999999"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/login_userid"
         tools:layout_editor_absoluteX="0dp" />
